--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
     "main": "dist/index.js",
     "scripts": {
         "build": "tsc",
-        "start": "node dist/index.js"
+        "start": "node dist/index.js",
+        "lint": "biome lint src",
+        "lint:fix": "biome lint --write src",
+        "format": "biome format --write src",
+        "check": "biome check --write src",
+        "cloc": "cloc . --exclude-dir=dist,node_modules --exclude-list-file=pnpm-lock.yaml"
     },
     "author": "Sylvie Rain",
     "license": "MIT",
     "packageManager": "pnpm@10.26.2",
     "devDependencies": {
+        "@biomejs/biome": "^2.3.14",
         "@types/node": "^25.2.3",
         "typescript": "^5.9.3"
     }
